# whattf.how

./: .gitignore  .prettierignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  package-lock.json  package.json  whattf.code-workspace
.claude/: restore-memories.sh  save-memories.sh  settings.json
.devcontainer/: .gitignore  README.md  devcontainer.json  docker-compose.yml  post-install.sh  whattf.dockerfile
.devcontainer/ai/: claude.sh
.devcontainer/languages/node/: install.sh
.devcontainer/languages/rust/: install.sh  rustup.sh  targets.sh
.devcontainer/system/: .bashrc  .tmux.conf  apt.sh  init-user.sh  system-config.sh
.devcontainer/tools/: gh.sh  lazygit.sh  wasm-pack.sh  wrangler.sh
.github/workflows/: ci.yml  deploy.yml
apps/site/: astro.config.mjs  package.json  tsconfig.json
apps/site/public/: robots.txt
apps/site/src/: consts.ts  content.config.ts
apps/site/src/components/: BaseHead.astro  BouncingBalls.tsx  Footer.astro  FormattedDate.astro  Header.astro  Sidebar.astro
apps/site/src/content/blog/: hello-world.mdx  rust-wasm-on-a-static-site.md
apps/site/src/layouts/: BaseLayout.astro  PostLayout.astro
apps/site/src/pages/: about.astro  index.astro  rss.xml.js
apps/site/src/pages/blog/: [...slug].astro
apps/site/src/styles/: global.css
crates/demo-bouncing/: Cargo.toml
crates/demo-bouncing/src/: lib.rs
scripts/: build-wasm.mjs
